Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99181

Fix loadMediaInLoadingState test

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.3, 6.3.0 Alpha
    • 6.3
    • Multimedia
    • None
    • Android
    • 33e1b6d61d (qt/qtmultimedia/dev) 0bf85e8a17 (qt/qtmultimedia/6.2) 8db9126b54 (qt/qtmultimedia/6.3)

      25: FAIL! : tst_QMediaPlayerBackend::loadMediaInLoadingState() Compared values are not the same
      25: Actual (player.mediaStatus()) : LoadedMedia
      25: Expected (QMediaPlayer::LoadingMedia): LoadingMedia

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samuelmira Samuel Mira
            samuelmira Samuel Mira
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes